:lipstick: fixed overflow scroll on likes page, looked weird

--- a/static/style/_likes.scss
+++ b/static/style/_likes.scss
@@ -1,5 +1,5 @@
 #likes {
-  overflow: scroll;
+//   overflow: scroll;
 
   #head {
     padding: 2.2em;
@@ -142,8 +142,13 @@
     }
   }
   article:last-of-type{
-      margin-bottom: 10em;
+      margin-bottom: 3em;
   }
+}
+
+#likes>div{
+    overflow: scroll;
+    height: 40em;
 }
 
 /* Cool Javascript scroll animation */
