--- a/static/style/main.css
+++ b/static/style/main.css
@@ -640,10 +640,6 @@ header section p {
   font-size: .8em;
 }
 
-#likes {
-  overflow: scroll;
-}
-
 #likes #head {
   padding: 2.2em;
   background-color: var(--nav-color);
@@ -783,7 +779,12 @@ header section p {
 }
 
 #likes article:last-of-type {
-  margin-bottom: 10em;
+  margin-bottom: 3em;
+}
+
+#likes > div {
+  overflow: scroll;
+  height: 40em;
 }
 
 /* Cool Javascript scroll animation */
